# pacer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
apps/: CMakeLists.txt  datparser.c  destructor_test.cpp  timeline.cpp  track_annotator.cpp
bindings/: CMakeLists.txt  generate-bindings.py  generate_all_bindings.py  litgen.cmake  module.cpp  nanobind_pacer.cpp
bindings/imgui/: CMakeLists.txt  generate-bindings.py  module.cpp  nanobind_imgui.cpp  pyproject.toml
bindings/imgui/imgui/: __init__.py  __init__.pyi
bindings/pacer/: CMakeLists.txt  __init__.pyi  generate-bindings.py  nanobind_pacer.cpp  pyproject.toml
bindings/pacer/pacer/: __init__.py  __init__.pyi
examples/: CMakeLists.txt  hello_imgui.cpp  hello_imgui_docking.cpp  my_gpmf_demo.cpp  my_imgui_demo.cpp  my_implot_demo.cpp
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/components/dashboard_ui/: CMakeLists.txt  dashboard_ui.cpp  idf_component.yml
firmware/components/dashboard_ui/include/: dashboard_ui.hpp
firmware/components/esp_lcd_nv3041a/: esp_lcd_nv3041a.c
firmware/components/pacer_core/: CMakeLists.txt
firmware/components/storage/: CMakeLists.txt  storage.cpp
firmware/components/storage/include/: storage.hpp
firmware/components/ubx_gps/: CMakeLists.txt  ubx_gps.cpp
firmware/components/ubx_gps/include/: ubx_gps.hpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
libs/: CMakeLists.txt  datatypes.hpp  geometry.hpp  laps.cpp  laps.hpp  movie-handler.cpp  movie-handler.hpp
libs/pacer/: datatypes.hpp  geometry.cpp  laps.hpp  movie-handler.cpp  movie-handler.hpp
notebooks/: dat-files.ipynb  interpolation.ipynb
pacer/: CMakeLists.txt  __init__.py  __init__.pyi
pacer/bindings/: CMakeLists.txt  generate-bindings.py  nanobind_pacer.cpp
pacer/datatypes/: CMakeLists.txt  datatypes.cpp  datatypes.hpp  ops.hpp
pacer/geometry/: CMakeLists.txt  __init__.py  geometry-bindings.cpp  geometry.cpp  geometry.hpp
pacer/gps-source/: CMakeLists.txt  gps-source-bindings.cpp  gps-source-dat.cpp  gps-source.cpp  gps-source.hpp  ubx-nav-pvt.hpp
pacer/laps/: CMakeLists.txt  __init__.py  laps-bindings.cpp  laps.cpp  laps.hpp
pacer/laps-display/: CMakeLists.txt  laps-display.cpp  laps-display.hpp
pacer/live-timing/: CMakeLists.txt  live-timing.cpp  live-timing.hpp
pacer/map-tiles/: CMakeLists.txt  canvas-tiles.cpp  canvas-tiles.hpp  implot-tiles.cpp  implot-tiles.hpp  tile-math.cpp  tile-math.hpp  tile-store.cpp  tile-store.hpp
pacer/movie-handler/: CMakeLists.txt  movie-handler.cpp  movie-handler.hpp
pacer/reference-track/: CMakeLists.txt  reference-track.cpp  reference-track.hpp
pacer/ui/: CMakeLists.txt  track-picker.cpp  track-picker.hpp
tests/: CMakeLists.txt  test_coordinate_system.cpp
tracks/: daytona-sandown-park.json  ellough-park.json  test-track.json
