[project]
authors = [{ name = "Denys Smirnov", email = "dendi239@gmail.com" }]
dependencies = []
description = "Add a short description here"
name = "pacer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pacer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cmake = ">=4.0.2,<5"
jupyter = ">=1.1.1,<2"
ipython = ">=9.2.0,<10"
pandas = ">=2.2.3,<3"
plotly = ">=6.1.0,<7"
