[project]
authors = [{ name = "Denys Smirnov", email = "dendi239@gmail.com" }]
dependencies = ["litgen @ git+https://github.com/pthom/litgen"]
description = "Add a short description here"
name = "imgui"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
    "litgen",
    "setuptools",
]
# build-backend = "scikit_build_core.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.setuptools.package-data]
imgui = ["*.so", "*.pyd", "**/*.pyi"]

[tool.setuptools]
packages = ["imgui"]

[tool.scikit-build]
build.targets = ["_imgui"]
build.verbose = true
cmake.source-dir = "../.."
wheel.packages = ["imgui"]
install.components = ["imgui_bindings"]
cmake.define = { CMAKE_OSX_DEPLOYMENT_TARGET = "13.3" }
