[project]
authors = [{ name = "Denys Smirnov", email = "dendi239@gmail.com" }]
dependencies = ["litgen @ git+https://github.com/pthom/litgen"]
description = "Add a short description here"
name = "pacer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = [
    "setuptools",
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
    "litgen",
]
# build-backend = "scikit_build_core.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.setuptools.package-data]
pacer = ["*.so", "*.pyd", "**/*.pyi"]

[tool.setuptools]
packages = ["pacer"]

# [tool.scikit-build]
# build.targets = ["_pacer"]
# build.verbose = true
# build-dir = "../../build/scikit-build"
# cmake.source-dir = "../.."
# wheel.py-api = "cp313"
# wheel.packages = ["pacer"]
